--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Programming Concepts
 email: 
 description: > # this means to ignore newlines until "baseurl:"
   Jekyll Theme Demo
-baseurl: "/baxoy-theme" # the subpath of your site, e.g. /blog/
-url: "http://baksoy.github.io" # the base hostname & protocol for your site
+baseurl: "http://baksoy.github.io" # the subpath of your site, e.g. /blog/
+url: "/" # the base hostname & protocol for your site
 twitter_username: baxoy
 github_username: baksoy
 
