--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ twitter_username: baxoy
 github_username: baksoy
 
 # Build settings
-markdown: redcarpet
+markdown: kramdown
 markdown_ext:  markdown,mkdown,mkdn,mkd,md
 
 redcarpet:
